--- a/config/provision/development/playbook.yml
+++ b/config/provision/development/playbook.yml
@@ -8,7 +8,7 @@
     user: 'vagrant'
     home: '/home/{{ user }}'
     rbenv_root: '{{ home }}/.rbenv'
-    name: 'app'
+    name: 'myapp2'
     application: '{{ home }}/applications/{{ name }}'
   tasks:
     - name: 'apt | update'
@@ -39,7 +39,6 @@
 
     - name: 'rbenv | check ruby-build installed'
       command: 'test -x {{ rbenv_root }}/plugins/ruby-build'
-
 
       register: 'plugin_installed'
       ignore_errors: yes
@@ -102,31 +101,6 @@
       shell: 'mkdir -p {{ application }}/shared/config -m 775 && chown -R {{ user }}:{{ user }} {{ home }}/applications'
       when: 'postgres_login|failed'
 
-    - name: 'postgresql | copy database.yml'
-      template: 'src=configs/database.yml dest={{ application }}/shared/config/database.yml owner={{ user }} group={{ user }} mode=0644'
-      when: 'postgres_login|failed'
-
     - name: 'postgresql | create database'
-      shell: 'createdb -U postgres -O postgres -E UTF8 -l en_US.UTF-8 {{ name }}_production'
+      shell: 'createdb -U postgres -O postgres -E UTF8 -l en_US.UTF-8 {{ name }}_development'
       when: 'postgres_login|failed'
-
-    - name: 'rails | copy settings.yml'
-      copy: 'src=configs/settings.yml dest={{ application }}/shared/config/settings.yml owner={{ user }} group={{ user }} mode=0644'
-
-    - name: 'nginx | check config'
-      command: 'test -f /etc/nginx/sites-enabled/{{ name }}.conf'
-      register: 'nginx_config_copied'
-      ignore_errors: yes
-
-    - name: 'nginx | createdir'
-      shell: 'rm /etc/nginx/sites-enabled/default; mkdir -p etc/nginx/sites-enabled/'
-      when: 'nginx_config_copied|failed'
-
-    - name: 'nginx | copy config'
-      template: 'src=configs/nginx.conf dest=/etc/nginx/sites-enabled/{{ name }}.conf owner=root group=root mode=0644'
-      when: 'nginx_config_copied|failed'
-
-    - name: 'nginx | restart service'
-
-      service: name=nginx state=restarted
-      when: 'nginx_config_copied|failed'
